--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
                         <span class="text-primary">Tanks</span>
                     </h1>
                     <div class="subheading mb-5">
-                        Archives· Historian· Librarian
+                        Archivist· Historian· Librarian
                         <a href="mailto:tanks.c@northeastern.edu">tanks.c@northeastern.edu</a>
                     </div>
-                    <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+                    <p class="lead mb-5"> I am an archivist, librarian, and historian who is dedicated to the empowerment of communities.</p>
                     <div class="social-icons">
                         <a class="social-icon" href="#!"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="#!"><i class="fab fa-github"></i></a>
