--- a/index.html
+++ b/index.html
@@ -47,12 +47,10 @@
                         Archivist· Historian· Librarian
                         <a href="mailto:tanks.c@northeastern.edu">tanks.c@northeastern.edu</a>
                     </div>
-                    <p class="lead mb-5"> I am an archivist, librarian, and historian who is dedicated to the empowerment of communities.</p>
+                    <p class="lead mb-5"> I am an archivist, librarian, and historian who is dedicated to the empowerment of communities and putting it into practice.</p>
                     <div class="social-icons">
-                        <a class="social-icon" href="#!"><i class="fab fa-linkedin-in"></i></a>
-                        <a class="social-icon" href="#!"><i class="fab fa-github"></i></a>
-                        <a class="social-icon" href="#!"><i class="fab fa-twitter"></i></a>
-                        <a class="social-icon" href="#!"><i class="fab fa-facebook-f"></i></a>
+                        <a class="social-icon" href="https://www.linkedin.com/in/cassietanks/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="social-icon" href="https://twitter.com/CassieConnected" target="_blank"><i class="fab fa-twitter"></i></a>
                     </div>
                 </div>
             </section>
