--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                         Archivist· Historian· Librarian
                         <a href="mailto:tanks.c@northeastern.edu">tanks.c@northeastern.edu</a>
                     </div>
-                    <p class="lead mb-5"> I am an archivist, librarian, and historian who is dedicated to the empowerment of communities and putting it into practice.</p>
+                    <p class="lead mb-5"> I am an archivist and historian who is dedicated to the empowerment of others.</p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/cassietanks/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://twitter.com/CassieConnected" target="_blank"><i class="fab fa-twitter"></i></a>
@@ -63,20 +63,28 @@
                     <h2 class="mb-5">Education</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">University of Colorado Boulder</h3>
-                            <div class="subheading mb-3">Bachelor of Science</div>
-                            <div>Computer Science - Web Development Track</div>
-                            <p>GPA: 3.23</p>
+                            <h3 class="mb-0">Northeastern University</h3>
+                            <div class="subheading mb-3">World History PhD Student</div>
+                            <div>20th century; Cold War; liberation; militarism and paramilitarism</div>
+                            <p></p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">August 2006 - May 2010</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">Present</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">James Buchanan High School</h3>
-                            <div class="subheading mb-3">Technology Magnet Program</div>
-                            <p>GPA: 3.56</p>
+                            <h3 class="mb-0">University of North Carolina at Chapel Hill</h3>
+                            <div class="subheading mb-3">MS in Library Science</div>
+                            <p>Carolina Academic Librar Association associate; University Archives</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">August 2002 - May 2006</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">August 2020 - May 2022</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">San Diego State University</h3>
+                            <div class="subheading mb-3">BA in History</div>
+                            <p>20th century; Black power; transnational liberation; Cold War</p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">August 2017-December 2019</span></div>
                     </div>
                 </div>
             </section>
