--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
             </section>
             <hr class="m-0" />
 			<!-- Portfolio-->
-            <section class="resume-section" id="workshops">
+            <section class="resume-section" id="portfolio">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Workshops</h2>
+                    <h2 class="mb-5">Portfolio</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Senior Web Developer</h3>
