--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
 					<li class="nav-item"><a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a></li>
 					<li class="nav-item"><a class="nav-link js-scroll-trigger" href="#publications">Publications</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards and Honors</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#workshops">Workshops</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#presentations">Presentations</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experience</a></li>
@@ -131,7 +131,23 @@
 			<!-- Publications-->
             <section class="resume-section" id="publications">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Skills</h2>
+                    <h2 class="mb-5">Publications</h2>
+                    <div class="d-flex flex-column flex-md-row justify-content-between">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">“’Can You Hear Me Okay?’ Launching a Story-Based Archive Collection During COVI -19"</h3>
+                            <div class="subheading mb-3">Visual Resources Association</div>
+                            <p>The COVID - 19 pandemic, racial reckoning across the United States, and the uncertainty of the future dramatically shaped the development of the UNC Story Archive collection. Formerly envisioned as a mobile recording studio that would travel to events to collect the stories of University of North Carolina alumni and students who are part of communities that have been misrepresented, ignored, or outright silenced in the historic record, a shift to entirely remote space had to happen. While considering how to rework the planning for this collection during Summer 2020, important questions about proceeding mindfully during crises arose. This article discusses how building the UNC Story Archive on intentional theoretical frameworks of collaboration, radical empathy, and honoring of space facilitated that shift and helped navigate those challenging questions. Available at: 
+https://online.vraweb.org/index.php/vrab/article/view/211
+.</p>
+                        </div>
+                    </div>   
+                </div>
+            </section>
+            <hr class="m-0" />
+			<!-- Publications-->
+            <section class="resume-section" id="publications">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">Publications</h2>
                     <div class="subheading mb-3">Programming Languages & Tools</div>
                     <ul class="list-inline dev-icons">
                         <li class="list-inline-item"><i class="fab fa-html5"></i></li>
@@ -168,54 +184,6 @@
                     </ul>
                 </div>
             </section>
-            <hr class="m-0" />
-			<!-- Awards-->
-            <section class="resume-section" id="awards">
-                <div class="resume-section-content">
-                    <h2 class="mb-5">Awards & Certifications</h2>
-                    <ul class="fa-ul mb-0">
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            Google Analytics Certified Developer
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            Mobile Web Specialist - Google Certification
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            1
-                            <sup>st</sup>
-                            Place - University of Colorado Boulder - Emerging Tech Competition 2009
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            1
-                            <sup>st</sup>
-                            Place - University of Colorado Boulder - Adobe Creative Jam 2008 (UI Design Category)
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            2
-                            <sup>nd</sup>
-                            Place - University of Colorado Boulder - Emerging Tech Competition 2008
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            1
-                            <sup>st</sup>
-                            Place - James Buchanan High School - Hackathon 2006
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            3
-                            <sup>rd</sup>
-                            Place - James Buchanan High School - Hackathon 2005
-                        </li>
-                    </ul>
-                </div>
-            </section>
-			<hr class="m-0" />
             <!-- Workshops-->
             <section class="resume-section" id="workshops">
                 <div class="resume-section-content">
