--- a/index.html
+++ b/index.html
@@ -134,11 +134,10 @@
                     <h2 class="mb-5">Publications</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">“’Can You Hear Me Okay?’ Launching a Story-Based Archive Collection During COVI -19"</h3>
+                            <h3 class="mb-0">“’Can You Hear Me Okay?’ Launching a Story-Based Archive Collection During COVID-19"</h3>
                             <div class="subheading mb-3">Visual Resources Association</div>
-                            <p>The COVID - 19 pandemic, racial reckoning across the United States, and the uncertainty of the future dramatically shaped the development of the UNC Story Archive collection. Formerly envisioned as a mobile recording studio that would travel to events to collect the stories of University of North Carolina alumni and students who are part of communities that have been misrepresented, ignored, or outright silenced in the historic record, a shift to entirely remote space had to happen. While considering how to rework the planning for this collection during Summer 2020, important questions about proceeding mindfully during crises arose. This article discusses how building the UNC Story Archive on intentional theoretical frameworks of collaboration, radical empathy, and honoring of space facilitated that shift and helped navigate those challenging questions. Available at: 
-https://online.vraweb.org/index.php/vrab/article/view/211
-.</p>
+                            <p>The COVID - 19 pandemic, racial reckoning across the United States, and the uncertainty of the future dramatically shaped the development of the UNC Story Archive collection. Formerly envisioned as a mobile recording studio that would travel to events to collect the stories of University of North Carolina alumni and students who are part of communities that have been misrepresented, ignored, or outright silenced in the historic record, a shift to entirely remote space had to happen. While considering how to rework the planning for this collection during Summer 2020, important questions about proceeding mindfully during crises arose. This article discusses how building the UNC Story Archive on intentional theoretical frameworks of collaboration, radical empathy, and honoring of space facilitated that shift and helped navigate those challenging questions.</p>
+							<p> <a href="https://online.vraweb.org/index.php/vrab/article/view/211" target="_blank"> Available at: https://online.vraweb.org/index.php/vrab/article/view/211 </a></p>
                         </div>
                     </div>   
                 </div>
