--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
                     </div>
                     <p class="lead mb-5"> I am an archivist and historian who is dedicated to the empowerment of others.</p>
                     <div class="social-icons">
-                        <a class="social-icon" href="https://www.linkedin.com/in/cassietanks/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-                        <a class="social-icon" href="https://twitter.com/CassieConnected" target="_blank"><i class="fab fa-twitter"></i></a>
+                        <a class="social-icon" href="https://www.linkedin.com/in/cassietanks/" target="_blank"><i class="fab fa-linkedin-in" style="--fa-animation-duration: 2s; --fa-fade-opacity: 0.6;></i></a>
+                        <a class="social-icon" href="https://twitter.com/CassieConnected" target="_blank"><i class="fab fa-twitter" style="--fa-animation-duration: 2s; --fa-fade-opacity: 0.6;></i></a>
                     </div>
                 </div>
             </section>
@@ -62,7 +62,7 @@
             <section class="resume-section" id="skills">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Skills</h2>
-                    <div class="subheading mb-3">Digital Humanities and Archive Tools</div>
+                    <div class="subheading mb-3">D</div>
                     <ul class="list-inline dev-icons">
                         <li class="list-inline-item"><i class="fab fa-html5"></i></li>
                         <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
