--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
                     </div>
                     <p class="lead mb-5"> I am an archivist and historian who is dedicated to the empowerment of others.</p>
                     <div class="social-icons">
-                        <a class="social-icon" href="https://www.linkedin.com/in/cassietanks/" target="_blank"><i class="fab fa-solid fa-linkedin-in fa-fade" style="--fa-animation-duration: 2s; --fa-fade-opacity: 0.6;"></i></a>
-                        <a class="social-icon" href="https://twitter.com/CassieConnected" target="_blank"><i class="fab fa-solid fa-twitter fa-fade" style="--fa-animation-duration: 2s; --fa-fade-opacity: 0.6;"></i></a>
+                        <a class="social-icon" href="https://www.linkedin.com/in/cassietanks/" target="_blank"><i class="fab fa-linkedin-in" style="--fa-animation-duration: 2s; --fa-fade-opacity: 0.6;"></i></a>
+                        <a class="social-icon" href="https://twitter.com/CassieConnected" target="_blank"><i class="fab fa-twitter" style="--fa-animation-duration: 2s; --fa-fade-opacity: 0.6;"></i></a>
                     </div>
                 </div>
             </section>
