--- a/index.html
+++ b/index.html
@@ -62,38 +62,51 @@
             <section class="resume-section" id="skills">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Skills</h2>
-                    <div class="subheading mb-3">D</div>
-                    <ul class="list-inline dev-icons">
-                        <li class="list-inline-item"><i class="fab fa-html5"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-js-square"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-angular"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-react"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-node-js"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-sass"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-less"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-wordpress"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-gulp"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-grunt"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-npm"></i></li>
-                    </ul>
-                    <div class="subheading mb-3">Workflow</div>
+                    <div class="subheading mb-3">Digital Humanities & Arvhive Tools</div>
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Mobile-First, Responsive Design
+                            Omeka Classic
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Cross Browser Testing & Debugging
+                            Omeka S
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Cross Functional Teams
+                            Scalar
+                        </li>
+						<li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            ArcGIS StoryMaps
+                        </li>
+						<li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            Adobe Audition
+                        </li>
+						<li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            Adobe Premiere
+                        </li>
+						<li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            Adobe Spark
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Agile Development & Scrum
+                            Step.Works
+                        </li>
+						<li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            CollectionBuilder
+                        </li>
+						<li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            GitHub Pages
+                        </li>
+						<li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            Archive-it
                         </li>
                     </ul>
                 </div>
