--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <section class="resume-section" id="skills">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Skills</h2>
-                    <div class="subheading mb-3">Digital Humanities & Arvhive Tools</div>
+                    <div class="subheading mb-3">Digital Humanities & Archive Tools</div>
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
