--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
                         <a href="mailto:tanks.c@northeastern.edu">tanks.c@northeastern.edu</a>
                     </div>
                     <p class="lead mb-5"> I am an archivist and historian who is dedicated to the empowerment of others.</p>
+					<p class="lead mb-5"> <a href="mailto:tanks.c@northeastern.edu?subject=Request for Cassie's full CV">Request full CV</a></p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/cassietanks/" target="_blank"><i class="fab fa-linkedin-in" style="--fa-animation-duration: 2s; --fa-fade-opacity: 0.6;"></i></a>
                         <a class="social-icon" href="https://twitter.com/CassieConnected" target="_blank"><i class="fab fa-twitter" style="--fa-animation-duration: 2s; --fa-fade-opacity: 0.6;"></i></a>
