--- a/index.html
+++ b/index.html
@@ -318,8 +318,8 @@
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
-                    <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-                    <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
+                    <p>Apart from being an archivist, librarian and budding historian, I enjoy being active and visiting local coffee shops. I enjoy taking dance classes, boxing classes, lifting weights, and going for long walks. My favorite way to "recover" from being active is trying new coffee shops.</p>
+                    <p class="mb-0">I spend my free time reading, watching comedy or horror movies, and taking in a comedy show. My latest hobby is getting to know Boston. </p>
                 </div>
             </section>
             <hr class="m-0" />
