--- a/index.html
+++ b/index.html
@@ -161,11 +161,7 @@
                             <div class="subheading mb-3">Exhibit curation | Project management | Project development</div>
                             <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
 							<p> Read more about Cassie's standpoint in relation to her involvement with developing the "Queerolina" exhibit below.</p>
-							<iframe src="/assets/img/cassie_position_letter_queerolina.pdf" width="100%" height="500px">
-							</iframe>
-							 <iframe src="/uploads/media/default/0001/01/540cb75550adf33f281f29132dddd14fded85bfc.pdf#toolbar=0" width="100%" height="500px">
-    </iframe>
-                        </div>
+							<iframe href="/assets/img/cassie_position_letter_queerolina.pdf" width="100%" height="500px"></iframe>
                         <div class="flex-shrink-0"><span class="text-primary">August 2021-May 2022</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
