--- a/index.html
+++ b/index.html
@@ -30,9 +30,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
 					<li class="nav-item"><a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a></li>
 					<li class="nav-item"><a class="nav-link js-scroll-trigger" href="#publications">Publications</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#workshops">Workshops</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#presentations">Presentations</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experience</a></li>
 					<li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
                 </ul>
             </div>
@@ -149,11 +147,19 @@
                     <h2 class="mb-5">Portfolio</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">UNC Story Archive</h3>
-                            <div class="subheading mb-3">Project development | Outreach | Archivist | Project Management </div>
+                            <h3 class="mb-0">Apartheid Heritage(s)</h3>
+                            <div class="subheading mb-3">Research Assistant | Exhibit Development | Archivist | Project Management </div>
                             <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">August 2020-May 2022</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">September 2019 - Present</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+							<h3 class="mb-0">UNC Story Archive</h3>
+                            <div class="subheading mb-3">Project Development | Outreach | Archivist | Project Management </div>
+                            <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">August 2020 - May 2022</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
@@ -163,23 +169,23 @@
 							<p> Read more about Cassie's standpoint in relation to her involvement with developing the "Queerolina" exhibit below.</p>
 							<embed src="https://drive.google.com/file/d/1aIkSFutvJNz0OwYiz0AK9Cpfqqjdp2A_/preview?usp=sharing" type="application/pdf" width="75%" height="300px" />
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">August 2021-May 2022</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">August 2021 - May 2022</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Junior Web Designer</h3>
-                            <div class="subheading mb-3">Shout! Media Productions</div>
+                            <h3 class="mb-0">National Humanities Center Podcasting Institute</h3>
+                            <div class="subheading mb-3">Tech Support | Cohort Management | Instructional Support | Audio Editing</div>
                             <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">July 2010 - December 2011</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Web Design Intern</h3>
-                            <div class="subheading mb-3">Shout! Media Productions</div>
+                            <h3 class="mb-0">SDSU Digital Humanities Center Assistant</h3>
+                            <div class="subheading mb-3">Tutorial Development | Workshops | Student Assistant Management | Daily Operations </div>
                             <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">September 2008 - June 2010</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">January 2020 - August 2020</span></div>
                     </div>
                 </div>
             </section>
@@ -196,45 +202,6 @@
 							<p> <a href="https://online.vraweb.org/index.php/vrab/article/view/211" target="_blank"> Available at: https://online.vraweb.org/index.php/vrab/article/view/211 </a></p>
                         </div>
                     </div>   
-                </div>
-            </section>
-            <hr class="m-0" />
-            <!-- Workshops-->
-            <section class="resume-section" id="workshops">
-                <div class="resume-section-content">
-                    <h2 class="mb-5">Workshops</h2>
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">Senior Web Developer</h3>
-                            <div class="subheading mb-3">Intelitec Solutions</div>
-                            <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">March 2013 - Present</span></div>
-                    </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">Web Developer</h3>
-                            <div class="subheading mb-3">Intelitec Solutions</div>
-                            <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">December 2011 - March 2013</span></div>
-                    </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">Junior Web Designer</h3>
-                            <div class="subheading mb-3">Shout! Media Productions</div>
-                            <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">July 2010 - December 2011</span></div>
-                    </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">Web Design Intern</h3>
-                            <div class="subheading mb-3">Shout! Media Productions</div>
-                            <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">September 2008 - June 2010</span></div>
-                    </div>
                 </div>
             </section>
             <hr class="m-0" />
