--- a/index.html
+++ b/index.html
@@ -262,8 +262,9 @@
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
-                    <p>Apart from being an archivist, librarian and budding historian, I enjoy being active and visiting local coffee shops. I enjoy taking dance classes, boxing classes, lifting weights, and going for long walks. My favorite way to "recover" from being active is trying new coffee shops.</p>
-                    <p class="mb-0">I spend my free time reading, watching comedy or horror movies, and taking in a comedy show. My latest hobby is getting to know Boston. </p>
+                    <p>I have never met a taco I didn't like.</p>
+					<p>I enjoy being active and visiting local coffee shops. I enjoy taking dance classes, boxing classes, lifting weights, and going for long walks.</p>
+                    <p>I spend my free time reading, watching comedy and horror movies, and taking in a comedy show. This influences how I approach work- I like to have fun and have a good laugh. My latest hobby is getting to know my new city, Boston.</p>
                 </div>
             </section>
             <hr class="m-0" />
