--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Queerolina</h3>
                             <div class="subheading mb-3">Exhibit curation | Project management | Project development</div>
-                            <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+                            <p>Stewarded this exhibit from the proposal, to planning, to development, to phase one completion. Combined archival principles and best practices, humanities theories and praxis, and digital humanities tools to create an interactive exhibit with ArcGIS StoryMaps and Omeka Classic.</p>
 							<p> Read more about Cassie's standpoint in relation to her involvement with developing the "Queerolina" exhibit below.</p>
 							<embed src="https://drive.google.com/file/d/1aIkSFutvJNz0OwYiz0AK9Cpfqqjdp2A_/preview?usp=sharing" type="application/pdf" width="75%" height="300px" />
                         </div>
