--- a/index.html
+++ b/index.html
@@ -229,15 +229,15 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">National Humanities Center Podcasting Institute</h3>
                             <div class="subheading mb-3">Tech Support | Cohort Management | Instructional Support | Audio Editing</div>
-                            <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
+                            <p></p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">July 2010 - December 2011</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">Summer 2020, Winter 2021, Summer 2021, Winter 2022</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">SDSU Digital Humanities Center Assistant</h3>
                             <div class="subheading mb-3">Tutorial Development | Workshops | Student Assistant Management | Daily Operations </div>
-                            <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
+                            <p></p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">January 2020 - August 2020</span></div>
                     </div>
@@ -304,7 +304,8 @@
                     <h2 class="mb-5">Interests</h2>
                     <p>I have never met a taco I didn't like.</p>
 					<p>I enjoy being active and visiting local coffee shops. I enjoy taking dance classes, boxing classes, lifting weights, and going for long walks.</p>
-                    <p>I spend my free time reading, watching comedy and horror movies, and taking in a comedy show. This influences how I approach work- I like to have fun and have a good laugh. My latest hobby is getting to know my new city, Boston.</p>
+                    <p>I spend my free time reading, watching comedy and horror movies, and taking in comedy shows when possible. This influences how I approach work- I like to have fun and have a good laugh.</p>
+					<p>My latest hobby is getting to know my new city, Boston.</p>
                 </div>
             </section>
             <hr class="m-0" />
