--- a/index.html
+++ b/index.html
@@ -101,7 +101,8 @@
                         </li>
                     </ul>
                 </div>
-				<div class="subheading mb-3">Digital Humanities & Archive Tools</div>
+				<div class="resume-section-content"</div>
+					<div class="subheading mb-3">Digital Humanities & Archive Tools</div>
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
@@ -148,7 +149,7 @@
                             Archive-it
                         </li>
                     </ul>
-                </div>
+					</div>
             </section>
 			<!-- Education-->
             <section class="resume-section" id="education">
