--- a/index.html
+++ b/index.html
@@ -223,6 +223,8 @@
                             <p>Stewarded this exhibit from the proposal, to planning, to development, to phase one completion. Combined archival principles and best practices, humanities theories and praxis, and digital humanities tools to create an interactive exhibit with ArcGIS StoryMaps and Omeka Classic.</p>
 							<p> Read more about Cassie's standpoint in relation to her involvement with developing the "Queerolina" exhibit below.</p>
 							<embed src="https://drive.google.com/file/d/1aIkSFutvJNz0OwYiz0AK9Cpfqqjdp2A_/preview?usp=sharing" type="application/pdf" width="75%" height="300px" />
+							<p> View the Queerolina map below </p>
+							<iframe src="https://storymaps.arcgis.com/stories/a6ae65f862f146fb9a1e1d2af9273da2" width="100%" height="500px" frameborder="0" allowfullscreen allow="geolocation"></iframe>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">August 2021 - May 2022</span></div>
                     </div>
